trunk/Archive2/c9/fa7286d2a91cb1/output
main.cpp: In instantiation of 'void do_sort_and_stuff(T) [with T = std::vector<int>]':
main.cpp:27:23:   required from here
main.cpp:16:5: error: 'class std::vector<int>' has no member named 'sort'
     container.sort();
     ^
